fix typing et debut de scaffolind ducfront
